--- a/package.json
+++ b/package.json
@@ -18,14 +18,15 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "bootstrap": "^5.2.3",
     "chart.js": "^4.4.7",
     "google-libphonenumber": "^3.2.34",
     "intl-tel-input": "^17.0.3",
+    "ng-recaptcha": "^13.2.1",
     "ng2-charts": "^5.0.4",
     "ngx-bootstrap": "^12.0.0",
     "ngx-daterangepicker-material": "^6.0.4",
     "ngx-intl-tel-input": "^3.2.0",
-    "bootstrap": "^5.2.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
