--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "chart.js": "^4.4.7",
     "google-libphonenumber": "^3.2.34",
     "intl-tel-input": "^17.0.3",
+    "ng-apexcharts": "^1.15.0",
     "ng-recaptcha": "^13.2.1",
     "ng2-charts": "^5.0.4",
     "ngx-bootstrap": "^12.0.0",
