--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/router": "^16.2.0",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "angularx-qrcode": "^19.0.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.4.7",
