--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "@angular/router": "^16.2.0",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
-    "angularx-qrcode": "^19.0.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.4.7",
     "google-libphonenumber": "^3.2.34",
+    "html2canvas": "^1.4.1",
     "intl-tel-input": "^17.0.3",
     "ng-apexcharts": "^1.15.0",
     "ng-recaptcha": "^13.2.1",
@@ -32,6 +32,7 @@
     "ngx-bootstrap": "^12.0.0",
     "ngx-daterangepicker-material": "^6.0.4",
     "ngx-intl-tel-input": "^3.2.0",
+    "ngx-qrcode-styling": "^1.3.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
