--- a/package.json
+++ b/package.json
@@ -15,14 +15,19 @@
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/localize": "^19.2.8",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "@ctrl/ngx-emoji-mart": "^9.2.0",
     "@ng-bootstrap/ng-bootstrap": "^18.0.0",
+    "@popperjs/core": "^2.11.8",
+    "@swimlane/ngx-charts": "^22.0.0-alpha.1",
+    "@swimlane/ngx-graph": "^10.0.0-alpha.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.4.7",
+    "d3": "^7.9.0",
     "google-libphonenumber": "^3.2.34",
     "html2canvas": "^1.4.1",
     "intl-tel-input": "^17.0.3",
