--- a/package.json
+++ b/package.json
@@ -27,9 +27,13 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.2.3",
     "chart.js": "^4.4.7",
+    "compression": "^1.8.0",
     "d3": "^7.9.0",
+    "express": "^5.1.0",
     "google-libphonenumber": "^3.2.34",
     "html2canvas": "^1.4.1",
+    "http": "^0.0.1-security",
+    "https": "^1.0.0",
     "intl-tel-input": "^17.0.3",
     "ng-apexcharts": "^1.15.0",
     "ng-recaptcha": "^13.2.1",
@@ -38,6 +42,7 @@
     "ngx-daterangepicker-material": "^6.0.4",
     "ngx-intl-tel-input": "^3.2.0",
     "ngx-qrcode-styling": "^1.3.3",
+    "path": "^0.12.7",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
