--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "ngx-qrcode-styling": "^1.3.3",
     "path": "^0.12.7",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
     "xlsx": "^0.18.5",
     "zone.js": "~0.13.0"
